Show all posts & replies of a user in profile

--- a/user/react/src/App.css
+++ b/user/react/src/App.css
@@ -638,6 +638,10 @@ input {
   opacity: 0.8;
 }
 
+.pf-btns-wrap {
+  float: right;
+}
+
 
 /**********************************************************
   12. Posts Page
