--- a/admin/react-vc-admin/src/App.css
+++ b/admin/react-vc-admin/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
-}
+/**********************************************************
+  CONTENT
+ **********************************************************
+  1.  General Layout
+  2.  Header
+  3.  Footer
+  4.  Dashboard
+**********************************************************/
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700&display=swap');
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
+/**********************************************************
+  1. General Layout
+**********************************************************/
+
+.page-container {
+  position: relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Mukta', sans-serif;
+  background-color: lightgrey;
+  color: darkslategrey;
 }
 
-.App-link {
-  color: #61dafb;
+.content-wrap {
+  padding-top: 5rem;  /* Header height */
+  padding-bottom: 2.5rem;  /* Footer height */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-container {
+  padding: 3% 10%;
+}
+
+.page-title {
+  font-family: "Prompt", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+
+/**********************************************************
+  2. Header
+**********************************************************/
+
+.header-logo {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  margin: 0 8px 6px 0;
+}
+
+.admin-header {
+  height: 5rem;
+  background-color: lightgrey;
+  box-shadow: 0 1px 20px 1px silver;
+  border-bottom: 2px solid silver;
+}
+
+.admin-navbar-brand {
+  font-family: 'Prompt', sans-serif;
+  font-weight: 600;
+  font-size: 26px !important;
+  color: darkslategray !important;
+}
+
+.admin-nav-link {
+  color: darkslategray !important;
+}
+.admin-nav-link:hover {
+  color: rgba(105, 105, 105, 0.8) !important;
+}
+
+
+/**********************************************************
+  3. Footer
+**********************************************************/
+
+.footer {
+  position: absolute;
+  background-color: lightgrey;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  font-size: small;
+  border-top: 1px solid silver;
+}
+
+.footer-content {
+  line-height: 2.5rem;
+  text-align: center;
+  margin: 0;
+}
+
+
+/**********************************************************
+  4. Dashboard
+**********************************************************/
+
+.dashboard-link {
+  color: darkslategrey;
+  text-decoration: none;
+}
+.dashboard-link:hover {
+  color: rgba(47, 79, 79, 0.7);
+}
+
+.dashboard-tab {
+  background-color: rgba(119, 136, 153, 0.5);
+  text-align: center;
+  height: 300px;
+  line-height: 300px;
+  border-radius: 30px;
+  font-size: 20px;
+  transition: all 0.25s ease;
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+}
+.dashboard-tab:hover {
+  background-color: rgba(119, 136, 153, 0.3);
 }
