--- a/admin/react-vc-admin/src/App.css
+++ b/admin/react-vc-admin/src/App.css
@@ -8,6 +8,7 @@
   5.  User Management
   5.  User Account
   5.  User Time Spent
+  5.  User Following
 **********************************************************/
 
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
@@ -50,6 +51,14 @@
 .page-subtitle {
   margin-top: 10px;
   font-weight: 300;
+}
+
+.page-message {
+  margin-top: 10px;
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 300;
+  opacity: 0.7;
 }
 
 
@@ -343,4 +352,13 @@ input {
 
 .time-spent-bar-wrap {
   height: 450px;
+}
+
+
+/**********************************************************
+  5. User Following
+**********************************************************/
+
+.flw-donut-bar-wrap {
+  height: 350px;
 }
