--- a/admin/react-vc-admin/src/App.css
+++ b/admin/react-vc-admin/src/App.css
@@ -4,6 +4,8 @@
   1.  General Layout
   2.  Header
   3.  Footer
+  4.  Button (Icon only)
+  5.  Button (Text)
   4.  Dashboard
   5.  User Management
   5.  User Account
@@ -149,6 +151,24 @@
 
 .pf-avatar-select {
   border: 3px solid mediumseagreen;
+}
+
+.back-btn {
+  color: rgb(118, 132, 162);
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  height: 100%;
+  border-radius: 8px;
+  text-align: center;
+  display: inline-block;
+}
+.back-btn:focus {
+  border: 1px solid rgba(118, 132, 162, 0.3);
+}
+.back-btn:hover,
+.back-btn:active {
+  background-color: rgba(118, 132, 162, 0.1);
 }
 
 
