--- a/admin/react-vc-admin/src/App.css
+++ b/admin/react-vc-admin/src/App.css
@@ -11,6 +11,7 @@
   5.  User Account
   5.  User Time Spent
   5.  User Following
+  5.  Posts
 **********************************************************/
 
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
@@ -171,6 +172,46 @@
   background-color: rgba(118, 132, 162, 0.1);
 }
 
+.po-icon-btn {
+  margin-left: 5px;
+  border-radius: 10px;
+  height: 30px;
+  width: 30px;
+  color: rgba(47, 79, 79, 0.8);
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+}
+.po-icon-btn:focus {
+  border-radius: 10px;
+  border: 1px solid rgba(119, 136, 153, 0.5);
+}
+.po-icon-btn:hover,
+.po-icon-btn:active {
+  background-color: rgba(119, 136, 153, 0.3);
+}
+
+.po-icon-btn-long {
+  padding-left: 0;
+  padding-right: 0;
+  float: right;
+  width: 45px;
+  text-align: center;
+  line-height: 30px;
+}
+.po-icon-btn-long:hover {
+  background-color: transparent;
+}
+
+.po-like-btn {
+  color: seagreen;
+}
+
+.po-dislike-btn {
+  color: rgb(220, 88, 65);
+}
+
+
 
 /**********************************************************
   2. Button (Text)
@@ -232,6 +273,18 @@
 }
 .view-posts-btn:active {
   background-color: rgba(119, 136, 153, 0.3);
+}
+
+.po-dlt-btn {
+  background-color: rgb(229, 98, 75);
+  width: 100px;
+  font-size: 14px;
+}
+.po-dlt-btn:focus {
+  border: 1px solid rgb(220, 71, 45);
+}
+.po-dlt-btn:active {
+  background-color: rgb(220, 71, 45);
 }
 
 
@@ -396,4 +449,120 @@ input {
 
 .flw-donut-bar-wrap {
   height: 350px;
+}
+
+
+/**********************************************************
+  12. Posts Page
+**********************************************************/
+
+.all-po-wrap {
+  /* reverse all posts (show latest post first) */
+  display: flex;
+  flex-direction: column-reverse;
+}
+.po-wrap {
+  background-color: rgba(119, 136, 153, 0.3);
+  padding: 3% 5%;
+  border-radius: 10px;
+}
+
+.po-text {
+  font-size: 15px;
+}
+.po-dlted-text {
+  font-style: italic;
+  font-weight: 300;
+  font-size: 13px;
+  color: rgba(47, 79, 79, 0.7);
+}
+
+.po-image-wrap {
+  text-align: center;
+}
+
+.po-image {
+  width: auto;
+  max-height: 350px;
+}
+
+.reply-wrap {
+  margin-left: 20px;
+  padding-left: 4%;
+  border-left: 1px solid rgba(119, 136, 153, 0.6);
+}
+
+.reply-text {
+  font-size: 13px;
+}
+.reply-dlted-text {
+  font-style: italic;
+  font-weight: 300;
+  font-size: 12px;
+  color: rgba(47, 79, 79, 0.7);
+}
+
+.form-msg-sm {
+  display: inline;
+  border-radius: 14px;
+  font-size: 13px;
+  padding: 9px 12px;
+  margin: 0px 10px 0px 0px;
+}
+
+.po-info-wrap {
+  display: flex;
+}
+
+.po-avatar-wrap {
+  width: 40px;
+}
+
+.po-avatar {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  margin: 5px;
+}
+
+.po-name-date-wrap {
+  flex: 1;
+  margin-left: 8px;
+}
+
+.po-name {
+  font-size: 14px;
+  line-height: 22px;
+  margin: 0px;
+}
+
+.po-info-icon {
+  font-size: 8px;
+  margin-bottom: 1px;
+}
+
+.po-date {
+  font-size: 10px;
+  line-height: 18px;
+  font-weight: 300;
+  margin: 0px;
+}
+
+.po-btns-wrap {
+  width: 135px;
+}
+
+.po-icon {
+  font-size: 11px;
+}
+
+.username-link {
+  color: darkslategrey;
+  text-decoration: none;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+}
+.username-link:hover {
+  color: rgba(47, 79, 79, 0.7);
 }
